--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     <header>
-        <p><b>Home</b> | <a href="chaka.html">Meet Chaka</a> | <a href="https://asuc.org/">ASUC Website</a></p>
+        <p><b>Home</b> | <a href="chaka.html">Meet Chaka</a> | <a href="https://asuc.org/">ASUC Website</a></p> | <a href="chaka.html">Resources</a> \ <a href="chaka.html">Departments</a> | <a href="chaka.html">Committees</a>
     </header>
     <div id="container">
         <div id="first-section">
-<!--            <div class="chaka-img"></div>-->
+            <div class="chaka-img"></div>
             <svg class="small" viewBox="0 0 300 300">
                 <a href="chaka.html">
                     <text fill="white" x="25%" y="25%">
