--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <p><b>Home</b> | <a href="chaka.html">Meet Chaka</a> | <a href="https://asuc.org/">ASUC Website</a></p> | <a href="chaka.html">Resources</a> \ <a href="chaka.html">Departments</a> | <a href="chaka.html">Committees</a>
+        <p><b>Home</b> | <a href="chaka.html">Meet Chaka</a> | <a href="https://asuc.org/">ASUC Website</a> | <a href="chaka.html">Resources</a> | <a href="chaka.html">Departments</a> | <a href="chaka.html">Committees</a></p>
     </header>
     <div id="container">
         <div id="first-section">
