--- a/index.html
+++ b/index.html
@@ -9,8 +9,16 @@
 </head>
 <body>
     <header>
-        <p><b>Home</b> | <a href="chaka.html">Meet Chaka</a> | <a href="https://asuc.org/">ASUC Website</a> | <a href="chaka.html">Resources</a> | <a href="chaka.html">Departments</a> | <a href="chaka.html">Committees</a></p>
+        <div class="main">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Resources</a></li>
+                <li><a href="#">Departments</a></li>
+                <li><a href="#">Committees</a></li>
+            </ul>
+        </div>
     </header>
+    
     <div id="container">
         <div id="first-section">
             <div class="chaka-img"></div>
