--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="chaka-img"></div>
             <svg class="small" viewBox="0 0 300 300">
                 <a href="chaka.html">
-                    <text fill="white" x="20%" y="20%">
+                    <text fill="white" x="20%" y="20%"> <!-- header position -->
                         ASUC SENATOR TELLEM
                     </text>
                 </a>
