--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     </text>
                 </a>
             </svg>
-            <img class="chaka-img" src="campanile.JPG" />
+            <img class="chaka-img" src="GroupPhoto.png" />
             <svg class="full" width="40%" viewBox="0 0 200 200">
                 <a href="chaka.html">
                     <text fill="white" x="10" y="50%">
