--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <svg class="full" width="40%" viewBox="0 0 200 200">
                 <a href="chaka.html">
                     <text fill="white" x="10" y="50%">
-                        <tspan x="10" y="30%">ASUC</tspan>
+                        <tspan x="10" y="30%">ASUC Senator Tellem</tspan>
                         <tspan x="10" y="40%">SENATOR</tspan>
                         <tspan x="10" y="50%">TELLEM</tspan>
                     </text>
