--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     <div id="container">
         <div id="first-section">
             <div class="chaka-img"></div>
-            <svg class="small" viewBox="15 15 300 300">
+            <svg class="small" viewBox="0 20 300 300">
                 <a href="chaka.html">
-                    <text fill="white" x="25%" y="25%"> <!-- header position -->
+                    <text fill="white" x="25%" y="25%"> <!-- header position? -->
                         ASUC SENATOR TELLEM
                     </text>
                 </a>
@@ -34,8 +34,6 @@
                 <a href="chaka.html">
                     <text fill="white" x="10" y="50%">
                         <tspan x="10" y="30%">ASUC Senator Tellem</tspan>
-                        <tspan x="10" y="40%">SENATOR</tspan>
-                        <tspan x="10" y="50%">TELLEM</tspan>
                     </text>
                 </a>
             </svg>
