--- a/index2.html
+++ b/index2.html
@@ -6,14 +6,42 @@
 </head>
 <body>
 	<header>
-		<div class="main">
-			<ul>
-				<li><a href="#">Home</a></li>
-				<li><a href="#">Resources</a></li>
-				<li><a href="#">Departments</a></li>
-				<li><a href="#">Committees</a></li>
-			</ul>
-		</div>
-	</header>
+        <div class="main">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Resources</a></li>
+                <li><a href="#">Departments</a></li>
+                <li><a href="#">Committees</a></li>
+            </ul>
+        </div>
+    </header>
+
+    <div id="first-section">
+            <div class="chaka-img"></div>
+            
+            <img class="chaka-img" src="GroupPhoto.png" />
+            <svg class="full" width="40%" viewBox="0 0 200 200">
+                <a href="chaka.html">
+                    <text fill="white" x="10" y="50%">
+                        <tspan x="35%" y="25%"> Meet </tspan>
+                        <tspan x="10" y="40%"> Senator Tellem's </tspan>
+                        <tspan x="65" y="55%"> Office </tspan>
+                    </text>
+                </a>
+            </svg>
+            <style>
+                svg {
+                    position: absolute;
+                    top: 60%;
+                    right: 30%;
+                    transform: translate(0, -50%);
+                }
+                text {
+                    font-family: sans-serif;
+                    font-size: x-large;
+                }
+            </style>
+        </div>
+	
 </body>
 </html>
