--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link href="index_styles.css" type="text/css" rel="stylesheet"/>
 </head>
 <body>
+    <img class="header-img" src="SenatorTellemLogo.png" />
     <header>
         <div class="topnav">
-            
             <a href="#home">Home</a>
             <a href="#resources">Resources</a>
             <a href="#departments">Departments</a>
@@ -41,8 +41,8 @@
             <style>
                 svg {
                     position: absolute;
-                    top: 62%;
-                    right: 30%;
+                    top: 60%;
+                    right: 31%;
                     transform: translate(0, -50%);
                 }
                 text {
@@ -54,12 +54,8 @@
 
         <div id="second-section">
             <div class="inner">
-                <h2>OUR MISSION</h2>
-                <img src="familypic.png" align="RIGHT"/><p>Chaka was elected as the Black Community-Endorsed Senator and is dedicated to assuring that communities on campus have the proper
-                    access, resources, and knowledge to not only survive, but also thrive at Berkeley. The office aims to address Cal's campus climate,
-                    advance academic and professional opportunities, and institutionalize environmental justice, while cultivating relationships between
-                    different communities on and off campus. Our mission is to make Berkeley more inclusive and supportive for all students by amplifying
-                    the voices of the most marginalized and assuring that everyone has a positive experience here at Cal.</p>
+                <h2>Senator Tellem</h2>
+                <img src="familypic.png" align="RIGHT"/>
 
             </div>
         </div>
