--- a/index2.html
+++ b/index2.html
@@ -8,10 +8,10 @@
 	<header>
         <div class="main">
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Resources</a></li>
-                <li><a href="#">Departments</a></li>
-                <li><a href="#">Committees</a></li>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#resources">Resources</a></li>
+                <li><a href="#departments">Departments</a></li>
+                <li><a href="#committees">Committees</a></li>
             </ul>
         </div>
     </header>
