--- a/nodedir/content/index.html
+++ b/nodedir/content/index.html
@@ -76,6 +76,7 @@
         </div>
         <div id="second-section">
             <div class="inner">
+                
                 <h2>SENATOR TELLEM</h2>
                 <img src="SenatorTellem.png" align="LEFT"/><p>Chaka was elected as the Black Community-Endorsed Senator and is dedicated to assuring that communities on campus have the proper
                     access, resources, and knowledge to not only survive, but also thrive at Berkeley. The office aims to address Cal's campus climate,
@@ -86,25 +87,58 @@
             </div>
         </div>
         <div id="third-section">
-            <h2 style="display: inline-block; width: 100%;"></h2>
-            <a href="/ce" class="sixth ce">
-                <img src="../commitee/ce/ce-logo.png"/>
-            </a>
-            <a href="/apo" class="sixth apo">
-                <img src="../commitee/apo/apo-logo.png"/>
-            </a>
-            <a href="/ej" class="sixth ej">
-                <img src="/commitee/ej/ej-logo.png"/>
-            </a>
-            <a href="/cc" class="sixth cc ">
-                <img src="/commitee/cc/cc-logo.png"/>
-            </a>
-            <a href="/tech" class="sixth tech ">
-                <img src="/commitee/tech/tech-logo.png"/>
-            </a>
-            <a href="/legislative" class="sixth leg ">
-                <img src="/commitee/leg/legislative-logo.png"/>
-            </a>
+        	<h2>Segments of Our Office</h2>
+            <div class="toprow">
+		        <a href="/ce" class="sixth ce">
+		            <img src="committee/ce/ce-logo.png"/>
+		            <p>Community Engagement</p>
+		        </a>
+		        <a href="/apo" class="sixth apo">
+		            <img src="committee/apo/apo-logo.png"/>
+		            <p>Academic & Professional Opportunities</p>
+		        </a>
+	            <a href="/ej" class="sixth ej">
+		            <img src="committee/ej/ej-logo.png"/>
+		            <p>Environmental Justice</p>
+		        </a>
+		    </div>
+		    <div class="bottomrow">
+		        <a href="/cc" class="sixthtwo cc">
+		            <img src="committee/cc/cc-logo.png"/>
+		            <p>Campus Climate</p>
+		        </a>
+		        <a href="/tech" class="sixthtwo tech">
+		            <img src="committee/tech/tech-logo.png"/>
+		            <p>Technology</p>
+		        </a>
+		        <a href="/legislative" class="sixthtwo leg">
+		            <img src="committee/leg/legislative-logo.png"/>
+		            <p>Legislative</p>
+		        </a>
+		    </div>
+		    <!--<svg class="full" height="11%" width="45%">
+                <text fill="white" x="10" y="50%">
+                    <tspan x="8%" y="66%">Segments of Our Office</tspan>
+                </text>
+            </svg>
+            <style>
+                svg {
+                    position: absolute;
+                    top: 263%;
+                    right: 29.5%;
+                    transform: translate(0, -50%);
+                    background-color: #070F2E;
+                    background-clip: content-box;
+                }
+                text {
+                    font-family: montserrat, sans-serif;
+                    font-size: 2.75em;
+                    color: #E9DE81;
+                    padding-top: 10px;
+                    margin: 10px;
+                    text-align: center;
+                }
+            </style>-->
         </div>
 
         <footer>
