--- a/nodedir/content/index.html
+++ b/nodedir/content/index.html
@@ -63,7 +63,7 @@
             <style>
                 svg {
                     position: absolute;
-                    top: 64%;
+                    top: 61%;
                     right: 30%;
                     transform: translate(0, -50%);
                 }
@@ -77,12 +77,15 @@
         <div id="second-section">
             <div class="inner">
                 
-                <h2>SENATOR TELLEM</h2>
-                <img src="SenatorTellem.png" align="LEFT"/><p>Chaka was elected as the Black Community-Endorsed Senator and is dedicated to assuring that communities on campus have the proper
+                
+                <img src="SenatorTellem.png" align="LEFT"/>
+                <div class="bordertext">
+                <h2>SENATOR TELLEM</h2><p>Chaka was elected as the Black Community-Endorsed Senator and is dedicated to assuring that communities on campus have the proper
                     access, resources, and knowledge to not only survive, but also thrive at Berkeley. The office aims to address Cal's campus climate,
                     advance academic and professional opportunities, and institutionalize environmental justice, while cultivating relationships between
                     different communities on and off campus. Our mission is to make Berkeley more inclusive and supportive for all students by amplifying
                     the voices of the most marginalized and assuring that everyone has a positive experience here at Cal.</p>
+                </div>
 
             </div>
         </div>
