--- a/nodedir/content/index.html
+++ b/nodedir/content/index.html
@@ -70,14 +70,13 @@
                 text {
                     font-family: sofia-pro, sans-serif;
                     font-size: 1.65em;
+                    font-weight: 400;
                     padding: 0;
                 }
             </style>
         </div>
         <div id="second-section">
             <div class="inner">
-                
-                
                 <img src="SenatorTellem.png" align="LEFT"/>
                 <div class="bordertext">
                 <h2>SENATOR TELLEM</h2><p>Chaka was elected as the Black Community-Endorsed Senator and is dedicated to assuring that communities on campus have the proper
@@ -90,7 +89,9 @@
             </div>
         </div>
         <div id="third-section">
-        	<h2>Segments of Our Office</h2>
+        	<div class="title">
+		        <h2>Segments of Our Office</h2>
+		    </div>
             <div class="toprow">
 		        <a href="/ce" class="sixth ce">
 		            <img src="committee/ce/ce-logo.png"/>
@@ -119,29 +120,6 @@
 		            <p>Legislative</p>
 		        </a>
 		    </div>
-		    <!--<svg class="full" height="11%" width="45%">
-                <text fill="white" x="10" y="50%">
-                    <tspan x="8%" y="66%">Segments of Our Office</tspan>
-                </text>
-            </svg>
-            <style>
-                svg {
-                    position: absolute;
-                    top: 263%;
-                    right: 29.5%;
-                    transform: translate(0, -50%);
-                    background-color: #070F2E;
-                    background-clip: content-box;
-                }
-                text {
-                    font-family: montserrat, sans-serif;
-                    font-size: 2.75em;
-                    color: #E9DE81;
-                    padding-top: 10px;
-                    margin: 10px;
-                    text-align: center;
-                }
-            </style>-->
         </div>
 
         <footer>
