--- a/nodedir/content/index.html
+++ b/nodedir/content/index.html
@@ -34,9 +34,9 @@
       			<i class="fa fa-caret-down"></i>
     		</button>
     		<div class="dropdown-content">
-      			<a href="#">Academic and Professional Opportunities</a>
-      			<a href="#">Campus Climate</a>
-      			<a href="#">Environmental Justice</a>
+      			<a href="committee/apo.html">Academic and Professional Opportunities</a>
+      			<a href="committee/cc.html">Campus Climate</a>
+      			<a href="committee/ej.html">Environmental Justice</a>
     		</div>
   		</div>
   		<div class="dropdown">
@@ -44,9 +44,9 @@
       			<i class="fa fa-caret-down"></i>
     		</button>
     		<div class="dropdown-content">
-      			<a href="#">Community Engagement</a>
-      			<a href="#">Legislative</a>
-      			<a href="#">Technology</a>
+      			<a href="committee/ce.html">Community Engagement</a>
+      			<a href="committee/legislative.html">Legislative</a>
+      			<a href="committee/tech.html">Technology</a>
     		</div>
   		</div>
         <a href="https://asuc.org/">ASUC Website</a>
@@ -93,29 +93,29 @@
 		        <h2>Segments of Our Office</h2>
 		    </div>
             <div class="toprow">
-		        <a href="/ce" class="sixth ce">
+		        <a href="committee/ce.html" class="sixth ce">
 		            <img src="committee/ce/ce-logo.png"/>
 		            <p>Community Engagement</p>
 		        </a>
-		        <a href="/apo" class="sixth apo">
+		        <a href="committee/apo.html" class="sixth apo">
 		            <img src="committee/apo/apo-logo.png"/>
 		            <p>Academic & Professional Opportunities</p>
 		        </a>
-	            <a href="/ej" class="sixth ej">
+	            <a href="committee/ej.html" class="sixth ej">
 		            <img src="committee/ej/ej-logo.png"/>
 		            <p>Environmental Justice</p>
 		        </a>
 		    </div>
 		    <div class="bottomrow">
-		        <a href="/cc" class="sixthtwo cc">
+		        <a href="committee/cc.html" class="sixthtwo cc">
 		            <img src="committee/cc/cc-logo.png"/>
 		            <p>Campus Climate</p>
 		        </a>
-		        <a href="/tech" class="sixthtwo tech">
+		        <a href="committee/tech.html" class="sixthtwo tech">
 		            <img src="committee/tech/tech-logo.png"/>
 		            <p>Technology</p>
 		        </a>
-		        <a href="/legislative" class="sixthtwo leg">
+		        <a href="committee/legislative.html" class="sixthtwo leg">
 		            <img src="committee/leg/legislative-logo.png"/>
 		            <p>Legislative</p>
 		        </a>
