--- a/nodedir/content/committee/ej.html
+++ b/nodedir/content/committee/ej.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>ASUC Senator Tellem</title>
+    <title>Environmental Justice Department</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://use.fontawesome.com/0acc59fded.js"></script>
     <link href="../index_styles.css" type="text/css" rel="stylesheet"/>
