--- a/nodedir/content/index.html
+++ b/nodedir/content/index.html
@@ -121,6 +121,12 @@
 		        </a>
 		    </div>
         </div>
+        <div id="fourth-section">
+            <div class="inner">
+            <img src="ejEvent.jpg" align="LEFT"/><img src="LawEvent.jpg" align="RIGHT"/>
+            <h2>Past Events</h2>
+            </div>
+        </div>
 
         <footer>
             <a href="https://www.instagram.com/asucsenatortellem/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
