--- a/nodedir/content/committee/ce.html
+++ b/nodedir/content/committee/ce.html
@@ -10,17 +10,56 @@
 <body>
 
 <header>
-    <a href="/">Home</a>
-    <a href="/chaka">Meet Chaka</a>
-    <a href="https://asuc.org/">ASUC Website</a>
-</header>
+        <img class="TellemLogo" src="../SenatorTellemLogo.png" width="130px" align="left"/>
+        <style>
+            .TellemLogo {
+                text-align: left;
+                padding-left: 20px;
+                padding-top: 10px;
+            }
+        </style>
+        <a href="/">Home</a>
+        <a href="/chaka">Meet Chaka</a>
+        <div class="dropdown">
+            <button class="dropbtn">Resources 
+                <i class="fa fa-caret-down"></i>
+            </button>
+            <div class="dropdown-content">
+                <a href="#">Office Hours</a>
+                <a href="#">Link 2</a>
+                <a href="#">Link 3</a>
+            </div>
+        </div>
+        <div class="dropdown">
+            <button class="dropbtn">Departments 
+                <i class="fa fa-caret-down"></i>
+            </button>
+            <div class="dropdown-content">
+                <a href="committee/apo.html">Academic and Professional Opportunities</a>
+                <a href="committee/cc.html">Campus Climate</a>
+                <a href="committee/ej.html">Environmental Justice</a>
+            </div>
+        </div>
+        <div class="dropdown">
+            <button class="dropbtn">Committees 
+                <i class="fa fa-caret-down"></i>
+            </button>
+            <div class="dropdown-content">
+                <a href="committee/ce.html">Community Engagement</a>
+                <a href="committee/legislative.html">Legislative</a>
+                <a href="committee/tech.html">Technology</a>
+            </div>
+        </div>
+        <a href="https://asuc.org/">ASUC Website</a>
+    </header>
+
 <div id="container">
     <div id="first-section">
         <h1>
             Community Engagement
         </h1>
         <p style="max-width:900px; padding: 20px; margin: 0 auto;padding-top: 0px;">
-            The Community Engagement Committee is dedicated to collaborating with all of the departments and committees in the office to establish relationships with Cal stakeholders, engage and share resources and events with the Berkeley community, and work to uplift internal projects to be as equitable and as inclusive as possible.
+            The Community Engagement (CE) Committee is dedicated to collaborating with all of the departments and committees in the office to establish relationships with Cal stakeholders, engage and share resources and events with the Berkeley community, and work to uplift internal projects to be as equitable and as inclusive as possible.
         </p>
         <style>
             #first-section p {
@@ -35,66 +74,36 @@
                 margin: 0 auto;
                 text-align: center;
                 font-family: rig-solid-medium-outline, sans-serif;
-                color: #ffee58;
+                color: #E9DE81; /*#ffee58;*/
                 font-size: 6em;
                 padding: 20px 0;
             }
         </style>
     </div>
-    <div id="second-section">
-        <!--
-            FOR EACH PROFILE, MAKE THE IMG ALIGN ALTERNATE FROM LEFT TO RIGHT,
-            THEN JUST COPY FROM THE <div class="profile"> TO THE ENDING </div> AND PASTE AND EDIT THE TEXT AND IMG SRC
-        -->
-        <div class="profile">
-            <img src="commitee/ce/izzyhuerta.jpg" width="25%" align="left"/>
-            <h2>
-                Izzy Huerta — Chair
-            </h2>
-            <p style="padding-bottom: 20px;">
-                Isabel Huerta is a sophomore double majoring in Political Science and Ethnic Studies and pursuing a minor in Race and Law. Born and raised in Santa Barbara, she hopes to dismantle institutional white supremacy in schools, by writing anti-racist school policy and targeting the very curriculum that is taught in K-12 education #ethnicstudies. In her free time, she loves making charcuterie boards, learning tiktok dances, and spending an entire day at the beach.
-            </p>
+    <div id="third-section">
+        <div class="title">
+            <h2>CE Associates</h2>
         </div>
-        <div class="profile left">
-            <img src="commitee/ce/jasondones.jpg" width="25%" align="right"/>
-            <h2>
-                Jason Dones — Associate
-            </h2>
-            <p style="padding-bottom: 20px;">
+        <div class="toprow">
+            <a href="#" class="sixth jason">
+                <img src="ce/jasondones.jpg"/>
+                <h2>Jason Dones</h2>
+
+                <p style="padding-bottom: 20px;">
                 Jason Dones is a first-year studying Physics and Political Economy. As Community Engagement Associate, he hopes to help make the ASUC more responsive to and representative of the student population. He chose to join the office of Senator Chaka Tellem because he knows that this office is committed to bringing everyone in and keeping Cal the best while making us even better. He loves playing soccer, cooking, and traveling in his free time. When we get back in-person, you can find him in the physics lab or taking a hike off-campus.
            </p>
-        </div>
-
-        <div class="profile">
-            <img src="commitee/ce/biancatorresmurray.png" width="25%" align="left"/>
-            <h2>
-                Bianca Torres Murray — Associate
-            </h2>
-            <p style="padding-bottom: 20px;">
-                Bianca is a first-year from Los Angeles, CA who intends to major in Ethnic Studies. She is a Community Engagement Associate for Senator Tellem’s office. Bianca is very passionate about social justice, government, community engagement, and research. After Cal, Bianca hopes to attend law school. In her free time, Bianca enjoys taking walks, painting/drawing, exploring cities, traveling, and going to events.
-            </p>
-        </div>
-
-        <div class="profile left">
-            <img src="commitee/ce/zachneff.jpg" width="25%" align="right"/>
-            <h2>
-                Zach Neff — Associate
-            </h2>
-            <p style="padding-bottom: 20px;">
-                Zach Neff is a third-year studying Political Science and a member of the Cal Varsity Rugby team. Hailing from Sacramento, California, Zach has a passion for Public Policy and Public Organization. He embraces intersectionality and seeks to advance community empathy and tolerance for all walks of people.  Zach is a member of the Pi Kappa Alpha fraternity and is the co-founder of the POC in Greek Life club. In his free time he enjoys deep conversations, long walks on the beach, and kicking it.
-            </p>
-        </div>
-
-        <div class="profile">
-            <img src="commitee/ce/Helen.jpg" width="25%" align="left"/>
-            <h2>
-                Helen Wang - Intern
-            </h2>
-            <p style="padding-bottom: 20px;">
-                Helen is a second-year student intended to major in Applied Mathematics, with a possible minor in Statistics. She is currently serving as a Community Engagement Intern in Senator Tellem’s Office. Having been raised in a place with a relatively homogenous population, Boise, Idaho, she wants to make sure diversity and inclusion are not only ongoing conversations, but that changes are being actively worked for and implemented in a world filled with systemic racism. Helen loves music, meeting new people, napping, and cooking. No, she does not do the cleaning.
-            </p>
+            </a>
+            <a href="#" class="sixth bianca">
+                <img src="ce/biancatorresmurray.png"/>
+                <p>Bianca Torres Murray</p>
+            </a>
+            <a href="#" class="sixth zach">
+                <img src="ce/zachneff.jpg"/>
+                <p>Zachary Neff</p>
+            </a>
         </div>
     </div>
+
 
     <footer>
         <a href="https://www.instagram.com/asucsenatortellem/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
@@ -123,59 +132,135 @@
         font-family: rig-solid-medium-outline, sans-serif;
         color: #64b5f6;
     }
-    .profile {
-        max-width: 900px;
+
+    #third-section .title {
+        position: relative;
+        display: inline-grid;
+        grid-template-columns: auto;
         width: 100%;
-        margin: 0 auto;
-        height: auto;
-        text-wrap: normal;
+        padding: 0px;
+        background-color: rgba(0, 0, 0, 0);
+        background: #FFFFF;
+        color: black;
+        text-align: center;
+        font-family: montserrat, sans-serif;
+        font-style: normal;
+        font-size: 2.25em;
+        font-weight: 500;
+    }
+
+    #third-section .toprow {
+        position: relative;
+        display: inline-grid;
+        grid-template-columns: auto auto auto;
+        grid-gap: 0px;
+        width: 100%;
+        padding: 0;
+        background-color: rgba(0, 0, 0, 0);
+        background: #FFFFF;
+
+    }
+
+    #third-section .sixth {
+        position: relative;
+        grid-column: span 1;
+
+        border-radius: 10%;
+        margin: 10px;
+        margin-bottom: 230px;
+        width: 60%;
+        
+    }
+
+
+    #third-section img {
+        width: 100%;
+        margin: 0%;
+    }
+
+    .sixth {
+        color: black;
+        text-align: center;
+        font-family: montserrat, sans-serif;
+        font-weight: 700;
+        font-size: 1.5em;
+        background-color: #fcf6f2;
+    }
+
+    .bianca {
+
+    }
+
+    .bianca p {
+        padding: 20px;
+        margin: 20px;
+        padding-top: 250px; /* for the committee/dept names */
+        font-family: sofia-pro, sans-serif;
+        font-weight: 800;
+        font-style: normal;
+        font-size: 1em;
+        color: black;
+        text-align: center;
+    }
+
+    .jason {
+    }
+
+    .jason h2 {
+        position: relative;
+        padding-bottom: 30px;
+        margin: 30px;
+        display: inline;
+        font-family: sofia-pro, sans-serif;
+        font-weight: 800;
+        font-style: normal;
+        font-size: 1em;
+        color: black;
+        text-align: center;
+    }
+
+    .jason p {
+        margin: 20px;
+        padding-top: 600px;
+        font-family: sofia-pro, sans-serif;
+        font-weight: 600;
+        font-style: normal;
+        font-size: .55em;
+        color: #1f2630;
+        text-align: center;
+        padding-bottom: 63px;
+    }
+
+
+    .zach p {
+        padding: 20px;
+        margin: 20px;
+        padding-top: 250px; /* for the committee/dept names */
+        font-family: sofia-pro, sans-serif;
+        font-weight: 800;
+        font-style: normal;
+        font-size: 1em;
+        color: black;
+        text-align: center;
+    }
+
+
+
+    .sixth p {
+        display: inline;
+        position: absolute;
+        top: 50%;
+        right: 50%;
+        transform: translate(50%, -50%);
+        margin: 0;
+        width: 100%;
         word-wrap: break-word;
     }
-    .profile > img {
-        display: block !important;
-        width: 25% !important;
-        max-height: 100% !important;
-    }
-    .profile h2 {
-        color: black !important;
-        width: auto !important;
-        padding: 0 !important;
-        padding-top: 10px !important;
-        margin: 0 !important;
-        text-align: left;
-        font-size: 30px !important;
-    }
-    .profile p {
-        color: black !important;
-        padding-left: 20px !important;
-    }
-    #second-section .profile:last-of-type {
-        padding-bottom: 80px !important;
-    }
-    #second-section .profile:first-of-type {
-        margin-top: 50px !important;
-    }
-    .left h2 {
-        padding-left: 20px !important;
-    }
+
+
+
     @media (max-width: 900px) {
-        .profile p {
-            text-align: justify;
-            text-justify: newspaper;
-        }
-
-        .profile > img {
-            width: 100% !important;
-        }
-
-        .profile h2 {
-            width: 100% !important;
-            max-width: 100% !important;
-        }
-
-        #second-section .profile:last-of-type {
-            padding-bottom: 0px !important;
-        }
+        
         svg {
             width: 100% !important;
             position: relative;
@@ -184,6 +269,19 @@
             width: 100%;
             position: relative;
         }
+
+        .sixth {
+            grid-column: span 6 !important;
+            padding: 30px 0;
+        }
+
+        #third-section {
+            height: 100%;
+        }
+
+
+
+
     }
 </style>
 </body>
