--- a/nodedir/content/index.html
+++ b/nodedir/content/index.html
@@ -25,7 +25,7 @@
     		</button>
     		<div class="dropdown-content">
       			<a href="#">Office Hours</a>
-      			<a href="#">Link 2</a>
+      			<a href="#">Events</a>
       			<a href="#">Link 3</a>
     		</div>
   		</div>
@@ -64,7 +64,7 @@
                 svg {
                     position: absolute;
                     top: 61%;
-                    right: 30%;
+                    right: 30.5%;
                     transform: translate(0, -50%);
                 }
                 text {
